Refactored the styling out of the inline style tags into the main css page. Fleshed out new comments section, finally moving it into the show page itself instead of having its own page. Having issue with the new comment form where it instantly collapses back every time you try to open it.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,6 +25,12 @@ nav {
     text-align: center;
 }
 
+/* Show Page CSS Start */
+
+#new-comment-body {
+    border-left: 5px solid #00C851;
+}
+
 #map {
     height: 400px;
     width: 100%;
@@ -34,3 +40,22 @@ nav {
 #show-list {
     margin-bottom: 1em;
 }
+
+#no-comments-text {
+    color: grey;
+}
+
+#user-icon {
+    color: orange;
+}
+
+#edit-comment-body {
+    border-left: 5px solid #ffbb33;
+    margin-top: 15px;
+}
+
+#delete-form {
+    display: inline;
+}
+
+/* Show Page CSS End */
